<resources>
    <string name="app_name">DINEio</string>
    <string name="banner">DINE iO</string>
    <string name="motto">Keep it Quiet!</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_now">Register Now!</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="register">REGISTER</string>
    <string name="dob">Date of birth</string>
    <string name="confirmpass">Re-enter password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="loginNow">Login</string>
    <string name="hint_full_name">Full Name</string>
    <string name="fullname">Name Here</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
</resources>