<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Registration">

    <TextView
        android:id="@+id/banner"
        android:text="@string/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-black"
        android:textAlignment="center"
        android:textSize="60sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/motto"
        android:text="@string/motto"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:textSize="18sp"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingEnd="0dp" />

    <EditText
        android:id="@+id/fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/hint_full_name"
        android:inputType="text"
        android:maxLines="1"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingEnd="0dp" />

    <EditText
        android:id="@+id/dob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/dob"
        android:inputType="date"
        android:maxLines="1"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingEnd="0dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingEnd="0dp" />

    <EditText
        android:id="@+id/confirmpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/confirmpass"
        android:inputType="textPassword"
        android:maxLines="1"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingEnd="0dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:id="@+id/registerbtn"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/register"
        android:layout_marginTop="40dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"/>

        <TextView
            android:layout_marginStart="5dp"
            android:id="@+id/Loginnow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginNow"
            android:textStyle="bold"/>

    </LinearLayout>
</LinearLayout>