<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="#fece2f"
            android:padding="20dp">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/display_photo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerVertical="true"
                android:src="@drawable/img" />

            <TextView
                android:id="@+id/fullname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/display_photo"
                android:includeFontPadding="false"
                android:text="@string/fullname"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginTop="-100dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="125dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/white"
                app:cardElevation="10dp"
                android:layout_margin="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/balance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:includeFontPadding="false"
                        android:text="Coming soon!"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/balance_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/balance"
                        android:layout_centerInParent="true"
                        android:includeFontPadding="false"
                        android:text="Wallet"
                        android:textStyle="bold"
                        android:textSize="14sp" />

                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="125dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/white"
                app:cardElevation="10dp"
                android:layout_margin="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/orders"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Coming Soon!"
                        android:includeFontPadding="false"
                        android:textSize="20sp"
                        android:layout_centerInParent="true"/>

                    <TextView
                        android:id="@+id/orders_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/orders"
                        android:layout_centerHorizontal="true"
                        android:includeFontPadding="false"
                        android:text="History"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical"
            android:gravity="center">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_full_name"
                android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fullname_editable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fullname"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/e_mail"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"

                    android:inputType="none"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dob"
                android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="1/1/1990"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/updatebtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Update"/>

            <TextView
                android:id="@+id/Logout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Sign Out"
                android:textAlignment="center"
                />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="20"
                android:visibility="gone"
                tools:ignore="MissingConstraints"/>
        </LinearLayout>

    </LinearLayout>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavView"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="#F44336"
        app:itemTextColor="@drawable/selector"
        app:itemIconTint="@drawable/selector"
        app:menu="@menu/nav_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>